--- a/SWE-CONVOS.html
+++ b/SWE-CONVOS.html
@@ -340,38 +340,50 @@
     var events = [
         {
             title: '💻 📚 C9 | WK1: SWE CONVOS WITH SWE @ UKG & General Body Meeting (GBM) | Spring 2025 Kickoff 🚀Open to All University Students!',
-            location: 'Friday, January 10, 2025 @ 2:00 PM - 3:00 PM - RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
+            location: 'Friday, January 10, 2025 @ 2:00 PM - 3:00 PM - RSVP & find the in-person location and Zoom link on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
             imageUrl: 'https://github.com/user-attachments/assets/ca5465e1-d568-4998-aa16-573958dce4a8',
             date: '2025-01-10'
         },
         {
             title: '💻 📚 C9 | WK1.1: SWE CONVOS WITH SWE @ LOWES | Spring 2025 🚀Open to All University Students!',
-            location: 'Date: Friday, Jan 17, 2025 2:00 PM - 3:00 PM EST - RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
+            location: 'Date: Friday, Jan 17, 2025 2:00 PM - 3:00 PM EST - RSVP & find the in-person location and Zoom link on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
             imageUrl: 'https://github.com/user-attachments/assets/065d175f-2db0-4e89-a8a7-2ba1d287d3f0',
             date: '2025-1-17'
         },
         {
             title: '💻 📚 C9 | WK2: SWE CONVOS WITH PM @ MICROSOFT | Spring 2025 🚀Open to All University Students!',
-            location: 'Date: Friday, Jan 24, 2025 2:00 PM - 3:00 PM EST - RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
+            location: 'Date: Friday, Jan 24, 2025 2:00 PM - 3:00 PM EST - RSVP & find the in-person location and Zoom link on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
             imageUrl: 'https://github.com/user-attachments/assets/501cf5e5-9fb3-48fa-97b0-cbcd9ac2bc64',
             date: '2025-1-24'
         },
         {
             title: '💻 📚 C9 | WK3: SWE CONVOS WITH Digi Dash | Spring 2025 🚀 Open to All University Students!',
-            location: 'Friday, Jan 31 2:00 PM - 3:00 PM EST - RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
+            location: 'Friday, Jan 31 2:00 PM - 3:00 PM EST - RSVP & find the in-person location and Zoom link on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
             imageUrl: 'https://github.com/user-attachments/assets/ae912cb7-d0fa-4232-8a84-a227d16ff2a4',
             date: '2025-01-31'
         },
         {
             title: '🚀 C9 | WK4: SWE Convos - SWE @ AMAZON | Spring 2025 🚀Open to All University Students!',
-            location: 'Monday, February 3, 2025 @ 8:30 PM - 9:30 PM EST - RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
+            location: 'Monday, February 3, 2025 @ 8:30 PM - 9:30 PM EST - RSVP & find the in-person location and Zoom link on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
             imageUrl: 'https://github.com/user-attachments/assets/0f51043e-8e7f-49c2-898c-ab6d2924b3c6',
             date: '2025-02-03'
         },
-      
+        {
+            title: '🚀 C9 | WK5: SWE Convos - SWE @ MICROSOFT | Spring 2025 🚀Open to All University Students!',
+            location: 'Friday, February 14, 2025 2:00 PM - 3:00 PM EST - RSVP & find the in-person location and Zoom link on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
+            imageUrl: 'https://github.com/user-attachments/assets/8cd15acc-3a65-432e-adc1-6e106a0e1836',
+            date: '2025-02-03'
+        },
+        {
+            title: '🚀 C9 | WK6: SWE Convos - SWE @ TIK TOK | Spring 2025 🚀Open to All University Students!',
+            location: 'Friday, February 21, 2025 2:00 PM - 3:00 PM EST - RSVP & find the in-person location and Zoom link on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
+            imageUrl: 'https://github.com/user-attachments/assets/af636480-2040-4b8f-badb-36a6e917a512',
+            date: '2025-02-03'
+        },
+    // Past events here
         {
             title: 'SWE Convos - SWE @  Google | Fall 2024 🚀Open to All University Students!',
-            location: 'Date: Friday, November 8 4:00 PM - 5:00 PM - RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
+            location: 'Date: Friday, November 8 4:00 PM - 5:00 PM - RSVP & find the in-person location and Zoom link on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a>',
             imageUrl: 'https://github.com/user-attachments/assets/33eb5e30-556e-4adc-8c13-5dd86aac574c',
             date: '2024-11-08'
         }
