--- a/Attendance-GLOBAL-guide.html
+++ b/Attendance-GLOBAL-guide.html
@@ -147,18 +147,18 @@
                         <ul class="steps-list">
                             <li>Become an official member by:</li>
                             <ul>
-                                <li><a href="https://forms.gle/ha9NMpfbJi4Gp7ds5" target="_blank">Filling out the membership form</a> on the club website.</li>
+                                <li><a href="https://forms.office.com/r/S90fPS33gL" target="_blank">Filling out the membership form</a> on the club website.</li>
                                 <li>Joining the Discord for club communications. (You will receive the link to join after you complete the membership form).</li>
                                 <li><strong>Joining the Discord</strong> for club communications. (You will receive the link to join after you complete the membership form).</li>
                                 <li><a href="https://www.linkedin.com/company/code-crunch-club/" target="_blank">Following us on LinkedIn</a> and <a href="https://www.instagram.com/codecrunchclub/" target="_blank">Instagram</a> for updates.</li>
                             </ul>
-                            <li>Record your <a href="https://forms.gle/kjj7ZKtWJRobzb5F7">attendance</a> (after you complete the membership form).</li>
+                            <li>Record your <a href="https://forms.office.com/r/VeSdyKvTX6">attendance</a> (after you complete the membership form).</li>
                             
                         </ul>
                             <br>
                         <h2>Steps for Current Members:</h2>
                         <ul class="steps-list">
-                            <li>Record your <a href="https://forms.gle/kjj7ZKtWJRobzb5F7">attendance</a> (including session attendance).</li>
+                            <li>Record your <a href="https://forms.office.com/r/VeSdyKvTX6">attendance</a> (including session attendance).</li>
                         </ul>
                         
                         <br>
