--- a/index.html
+++ b/index.html
@@ -440,19 +440,40 @@
                         </div>
                     </div>
 
-                
+                    <!-- Google Docs Folder & GitHub Repository Access Card -->
+                    <!-- Google Docs Folder: https://drive.google.com/drive/folders/1TszlvVIOM9glMcMINbFpELWidgagtSD1?usp=sharing -->
+                    <!-- GitHub Repository: https://github.com/CODE-CRUNCH-CLUB -->
 
-                    <!-- Google Docs Folder Card -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5">
-                                <h2 class="fs-4 fw-bold">Google Docs Folder</h2>
-                                <p class="mb-0">Access is only available for current members. Access to our shared Google Drive folder is granted weekly, every Monday, after you become a member.</p>
-                                <p class="mt-3"><strong>Note:</strong> If you cannot view the documents, please request access through Google or contact one of the club admins to grant you the necessary permissions.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://drive.google.com/drive/folders/1TszlvVIOM9glMcMINbFpELWidgagtSD1?usp=sharing" target="_blank">Open Google Drive</a>
+                                <h2 class="fs-4 fw-bold">Google Docs Folder & GitHub Repository Access</h2>
+                                <p class="mb-0">Access is available only for current members. To gain access:</p>
+                                <ul class="text-start mt-3">
+                                    <li>Fill out the "Become a member" form.</li>
+                                    <li>Fill form "Resources Access".</li>
+                                    <li>Access is typically granted within 24 hours of completing the form. If access is not provided within 24 hours, please check again the following Monday after becoming a member.</li>
+                                </ul>
+                                <p class="mb-3">Resources are available for all members, including FIU students and students from any other university.</p>
+                                <p class="mt-3">
+                                    <a class="btn btn-success btn-lg mt-2" href="https://forms.office.com/r/AtsE1q8C9C" target="_blank">Request Access</a>
+                                </p>
+                                <p class="mt-3"><strong>Note:</strong> If you are unable to view the documents, please contact us via DM on LinkedIn to request the necessary permissions.</p>
+                                <p class="mb-0"><strong>If you already have access, click here:</strong></p>
+                                
+                                <li>Quick link: go.fiu.edu/CODE-CRUNCH-SHARED-FOLDER</li>
+                                <p class="mt-3">
+                                    <a class="btn btn-primary btn-lg mt-2" href="https://go.fiu.edu/CODE-CRUNCH-SHARED-FOLDER" target="_blank">Google Shared Folder</a>
+                                </p>
+                                <li>Quick link: github.com/CODE-CRUNCH-CLUB</li>
+                                <p class="mt-3">
+                                    <a class="btn btn-secondary btn-lg mt-2" href="https://github.com/CODE-CRUNCH-CLUB" target="_blank">GitHub</a>
+                                </p>
                             </div>
                         </div>
                     </div>
+
+
 
                     <!-- Crunch LABS: Hackathon Edition & Team Sign-Up -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
