--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5">
-                                <h2 class="fs-4 fw-bold">Crunch LABS: Hackathon Edition & Team Sign-Up</h2>
+                                <h2 class="fs-4 fw-bold">C4 | Crunch LABS: Hackathon Edition & Team Sign-Up</h2>
                                 <p class="mb-0">Participating in the hackathon workshops is open to everyone and does not require signing up for the team. Feel free to join the workshops to learn, collaborate, and innovate!</p>
                                 <p class="mt-3">If you’d like to represent Code Crunch in the hackathon as part of the team, you can sign up below:</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="all-team-hack-signup.html" target="_blank">Sign Up for the Team</a>
