--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     <P> </P>
 
                     <div class="card-footer text-muted">
-                        March 24–27, 2025 & March 29–31, 2025
+                        Code Crunch - Tropical Spring Hack - SPRING 2025 | March 24–27, 2025 & March 29–31, 2025
                     </div>
                     <P> </P>
 
