--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
 
         <!-- Image Section -->
-        <div class="image-section">
+        <div class="container px-lg-5 text-center my-3"">
             <img src="https://github.com/user-attachments/assets/7863c177-b000-45ed-8b84-02e3b1946e32" alt="Hackathon Image">
         </div>
     </div>
@@ -261,7 +261,7 @@
 
         <!-- Group Photo Section -->
         <section class="group-photo py-5">
-            <div class="container px-lg-5 text-center">
+            <div class="container px-lg-5 text-center my-3">
                 <h2 class="fw-bold mb-4">Meet Our Club</h2>
                 <img src="https://github.com/user-attachments/assets/3cc0162a-0596-4d51-a59a-b135efc28d80" alt="Code Crunch Club Group Photo" class="img-fluid rounded"
                  />
