--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
             .hackathon-section {
                 position: relative;
                 width: 100%;
-                height: 100vh; /* Full height */
+                min-height: 100vh; /* Replace height with min-height */
             }
+
 
             .hackathon-container {
                 position: relative;
@@ -114,11 +115,11 @@
             }
 
             .image-section img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover; /* Ensure the image covers the section without distortion */
-                display: block;
-            }
+    width: 100%;
+    max-height: 80vh; /* Limit max height */
+    object-fit: contain; /* Adjust to fit better */
+}
+
 
             /* Page content styles */
             .card {
