--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
             .hackathon-section {
                 position: relative;
                 width: 100%;
-                min-height: 100vh; /* Replace height with min-height */
+                height: 100vh; /* Full height */
             }
-
 
             .hackathon-container {
                 position: relative;
@@ -115,11 +114,11 @@
             }
 
             .image-section img {
-    width: 100%;
-    max-height: 80vh; /* Limit max height */
-    object-fit: contain; /* Adjust to fit better */
-}
-
+                width: 100%;
+                height: 100%;
+                object-fit: cover; /* Ensure the image covers the section without distortion */
+                display: block;
+            }
 
             /* Page content styles */
             .card {
