--- a/index.html
+++ b/index.html
@@ -241,27 +241,40 @@
 
 
 <!-- Hackathon Section -->
-<section class="hackathon-section">
-    <div class="hackathon-container">
-        <!-- Countdown Section -->
-        <div class="countdown-section">
-            <h1>Code Crunch Hackathon</h1>
-            <p>Spring 2026 - Something amazing is on its way!</p>
-            <div id="countdown" class="countdown"></div>
-        </div>
+<section class="hackathon-section py-5">
+    <div class="container">
+        <!-- Card Wrapper -->
+        <div class="card shadow-lg border-0">
+            <!-- Card Header -->
+            <div class="card-header bg-success text-white text-center">
+                <h1 class="card-title mb-0">Code Crunch Hackathon</h1>
+                <p class="card-text mt-2">Spring 2026 - Something amazing is on its way!</p>
+            </div>
 
-        <!-- Image Section -->
-        <div class="container px-lg-5 text-center my-3"">
-            <img src="https://github.com/user-attachments/assets/7863c177-b000-45ed-8b84-02e3b1946e32" alt="Hackathon Image">
+            <!-- Card Body -->
+            <div class="card-body">
+                <!-- Countdown Section -->
+                <div id="countdown" class="countdown text-center mb-4">
+                    <!-- Countdown timer will be updated dynamically -->
+                </div>
+
+                <!-- Image Section -->
+                <div class="text-center">
+                    <img src="https://github.com/user-attachments/assets/7863c177-b000-45ed-8b84-02e3b1946e32" 
+                         alt="Hackathon Image" 
+                         class="img-fluid rounded shadow-sm">
+                </div>
+            </div>
         </div>
     </div>
 </section>
 
 
 
+
         <!-- Group Photo Section -->
         <section class="group-photo py-5">
-            <div class="container px-lg-5 text-center my-3">
+            <div class="container px-lg-5 text-center my-4">
                 <h2 class="fw-bold mb-4">Meet Our Club</h2>
                 <img src="https://github.com/user-attachments/assets/3cc0162a-0596-4d51-a59a-b135efc28d80" alt="Code Crunch Club Group Photo" class="img-fluid rounded"
                  />
