--- a/index.html
+++ b/index.html
@@ -262,24 +262,25 @@
                 <div class="text-center">
                     <img src="https://github.com/user-attachments/assets/7863c177-b000-45ed-8b84-02e3b1946e32" 
                          alt="Hackathon Image" 
-                         class="img-fluid rounded shadow-sm">
+                         class="img-fluid rounded shadow-sm w-100"
+                         style="max-height: 400px; object-fit: cover;">
                 </div>
             </div>
         </div>
     </div>
+</section>
 
+<!-- Group Photo Section -->
+<section class="group-photo py-5">
+    <div class="container px-lg-5 text-center my-4">
+        <h2 class="fw-bold mb-4">Meet Our Club</h2>
+        <img src="https://github.com/user-attachments/assets/3cc0162a-0596-4d51-a59a-b135efc28d80" 
+             alt="Code Crunch Club Group Photo" 
+             class="img-fluid rounded shadow-sm w-100" 
+             style="max-height: 400px; object-fit: cover;">
+    </div>
+</section>
 
-
-
-
-        <!-- Group Photo Section -->
-        <section class="group-photo py-5">
-            <div class="container px-lg-5 text-center my-4">
-                <h2 class="fw-bold mb-4">Meet Our Club</h2>
-                <img src="https://github.com/user-attachments/assets/3cc0162a-0596-4d51-a59a-b135efc28d80" alt="Code Crunch Club Group Photo" class="img-fluid rounded"
-                 />
-            </div>
-        </section>
 
 
 <!-- Page Content -->
