--- a/index.html
+++ b/index.html
@@ -244,38 +244,48 @@
     <div class="container">
         <!-- Unified Card -->
         <div class="card shadow-lg border-0">
-            <!-- Card Header -->
+            <!-- Card Header: Meet Our Club -->
             <div class="card-header bg-success text-white text-center">
-                <h1 class="card-title mb-0">Code Crunch Events & Hackathons</h1>
+                <h1 class="card-title mb-0">Meet Our Club</h1>
             </div>
-
-            <!-- Card Body -->
             <div class="card-body">
                 <!-- Group Photo Section -->
                 <div class="text-center mb-4">
-                    <h2 class="fw-bold mb-4">Meet Our Club</h2>
                     <img src="https://github.com/user-attachments/assets/3cc0162a-0596-4d51-a59a-b135efc28d80" 
                          alt="Code Crunch Club Group Photo" 
                          class="img-fluid rounded shadow-sm w-100" 
                          style="max-height: 400px; object-fit: cover;">
                 </div>
 
-                <!-- Hackathon Card Section -->
+                <!-- Card -->
+                <!-- Card Header: Hackathon Card -->
+                <div class="card-header bg-success text-white text-center">
+                    <h1 class="card-title mb-0">Code Crunch - Tropical Spring Hack | SPRING 2025</h1>
+                </div>
+
+
                 <div class="text-center mb-4">
-                    <h3 class="fw-bold mb-3">Code Crunch - Tropical Spring Hack | SPRING 2025</h3>
-                    <img src="https://github.com/user-attachments/assets/7eb230e8-f647-4b7a-9c32-48bb4ea25275" 
-                         alt="Tropical Spring Hack Photo" 
-                         class="img-fluid rounded shadow-sm w-100"
-                         style="max-height: 400px; object-fit: cover;">
-                    <p class="mt-3">
-                        Hack your way into the spring vibes! Let Miami's tropical energy inspire your next big idea in this vibrant hackathon.
-                    </p>
-                    <p class="mt-3">
-                        <strong>Workshops (March 24th - 27th, 2025):</strong> Daily sessions from Monday to Thursday to prep you for the big weekend.  
-                    </p>
-                    <p>
-                        <strong>Hackathon:</strong> Starts on <strong>Saturday, March 29, 2025, at 9 AM</strong> and ends on <strong>Monday, March 31, 2025, at 5 PM</strong>.
-                    </p>
+                    <div class="text-center my-3">
+                        <img src="https://github.com/user-attachments/assets/7eb230e8-f647-4b7a-9c32-48bb4ea25275" 
+                             alt="Tropical Spring Hack Photo" 
+                             class="img-fluid rounded shadow-sm" 
+                             style="max-width: 100%; height: auto;">
+                    </div>
+                    <div class="mt-3">
+                        <p>
+                            Hack your way into the spring vibes! Let Miami's tropical energy inspire your next big idea in this vibrant hackathon.
+                        </p>
+                        <p>
+                            <strong>Workshops (March 24th - 27th, 2025):</strong> Daily sessions from Monday to Thursday to prep you for the big weekend.
+                        </p>
+                        <p>
+                            <strong>Hackathon:</strong> Starts on <strong>Saturday, March 29, 2025, at 9 AM</strong> and ends on <strong>Monday, March 31, 2025, at 5 PM</strong>.
+                        </p>
+                        <p>
+                            Dive into the tropical Miami spirit, code with fellow innovators, and let your ideas bloom this spring.
+                        </p>
+                    </div>
+
                     <div class="my-4">
                         <p class="fw-bold">In partnership with:</p>
                         <ul class="list-unstyled text-center">
@@ -289,6 +299,7 @@
                     <p>
                         The Code Crunch Club at FIU, along with its partners, is thrilled to host the Tropical Spring Hackathon, open to <strong>ALL university students</strong>! 🌟 Whether you're an experienced coder or a beginner, this is your chance to learn, build, and showcase your skills while connecting with industry experts and fellow tech enthusiasts.
                     </p>
+                    <p><strong>Applications open December 2024</strong></p>
                     <a href="all-tropical-spring-hack25.html" class="btn btn-warning">Get More Info</a>
                 </div>
 
@@ -299,22 +310,27 @@
                         <h5>Code Crunch - 305 Hackathon</h5>
                         <p>September 12–14, 2025</p>
                     </div>
-                    <div class="hackathon-item mb-3">
+                    <div class="hackathon-item">
                         <h5>Code Crunch - Tropical Spring Hack</h5>
                         <p>March 27–29, 2026</p>
                     </div>
                 </div>
 
-                <!-- Spring 2026 Hackathon Section -->
+
+                <!-- Card -->
+                <!-- Card Header: Spring 2026 Hackathon-->
+                <div class="card-header bg-success text-white text-center">
+                    <h1 class="card-title mb-0">Code Crunch Hackathon | Spring 2026</h1>
+                </div>
+
                 <div class="text-center mb-4">
-                    <h3 class="fw-bold mb-3">Code Crunch Hackathon | Spring 2026</h3>
                     <p>Spring 2026 - Something amazing is on its way!</p>
                     <div id="countdown" class="countdown mb-3">
                         <!-- Countdown timer will be dynamically updated -->
                     </div>
                     <img src="https://github.com/user-attachments/assets/7863c177-b000-45ed-8b84-02e3b1946e32" 
                          alt="Hackathon Image" 
-                         class="img-fluid rounded shadow-sm w-100"
+                         class="img-fluid rounded shadow-sm w-100" 
                          style="max-height: 400px; object-fit: cover;">
                 </div>
             </div>
@@ -329,11 +345,10 @@
 
 
 
-
-
-
-
-            
+<!-- Page Content club cards -->
+<section class="page-content-section pt-4">
+    <div class="container px-lg-5">
+        <div class="row gx-lg-5 justify-content-center">           
 
 
                    <!-- Become a Member Card -->
