--- a/all-tropical-spring-hack25.html
+++ b/all-tropical-spring-hack25.html
@@ -256,7 +256,7 @@
         <!-- Hackathon Photo Section -->
         <section class="group-photo py-5 bg-light rounded shadow-sm">
             <div class="container px-lg-5 text-center">
-                <h2 class="fw-bold mb-4 text-uppercase text-primary">Tropical Spring Hackathon</h2>
+                <h2 class="fw-bold mb-4 text-uppercase text-primary">Tropical Spring 2025 Hackathon</h2>
                 <img src="https://github.com/user-attachments/assets/7eb230e8-f647-4b7a-9c32-48bb4ea25275" 
                      alt="Hackathon Photo Section" 
                      class="img-fluid rounded" 
