--- a/all-become-a-member.html
+++ b/all-become-a-member.html
@@ -296,7 +296,7 @@
                         <h2 class="fs-4 fw-bold">Membership for Any University Student</h2>
                         <a 
                            class="btn btn-primary btn-lg mt-3" 
-                           href="https://forms.gle/ha9NMpfbJi4Gp7ds5" 
+                           href="https://forms.office.com/r/S90fPS33gL" 
                            target="_blank" 
                            aria-label="Join Code Crunch for University Students Worldwide">
                             Join here
