--- a/all-become-a-member.html
+++ b/all-become-a-member.html
@@ -280,7 +280,7 @@
                         <h2 class="fs-4 fw-bold">Membership for FIU Students</h2>
                         <a 
                            class="btn btn-primary btn-lg mt-3" 
-                           href="https://forms.office.com/r/JEbApqq0U9" 
+                           href="https://forms.gle/DAf9if9CjNsYioxRA" 
                            target="_blank" 
                            aria-label="Join Code Crunch for FIU Students">
                             Join here
@@ -296,7 +296,7 @@
                         <h2 class="fs-4 fw-bold">Membership for Any University Student</h2>
                         <a 
                            class="btn btn-primary btn-lg mt-3" 
-                           href="https://forms.office.com/r/S90fPS33gL" 
+                           href="https://forms.gle/ZRY1JAH5XxxN4SLD8" 
                            target="_blank" 
                            aria-label="Join Code Crunch for University Students Worldwide">
                             Join here
