--- a/all-discord.html
+++ b/all-discord.html
@@ -269,7 +269,7 @@
                         <h2 class="fs-4 fw-bold">Discord for FIU Students</h2>
                         <a 
                            class="btn btn-primary btn-lg mt-3" 
-                           href="https://forms.office.com/r/JEbApqq0U9" 
+                           href="https://forms.gle/DAf9if9CjNsYioxRA" 
                            target="_blank" 
                            aria-label="Join Code Crunch for FIU Students">
                             Sign Up
@@ -285,7 +285,7 @@
                         <h2 class="fs-4 fw-bold">Discord for Any University Student</h2>
                         <a 
                            class="btn btn-primary btn-lg mt-3" 
-                           href="https://forms.gle/kMAC8ftU5JunzdF46" 
+                           href="https://forms.gle/ZRY1JAH5XxxN4SLD8" 
                            target="_blank" 
                            aria-label="Join Code Crunch for University Students Worldwide">
                            Sign Up
