--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h3>Contact Us via Email</h3>
                         <p>Click the button below to email us directly:</p>
-                        <a href="mailto:codecrunchfiu@outlook.com?cc=apena211@fiu.edu,apena211@fiu.edu.com&subject=Code%20Crunch%20Inquiry" class="btn btn-primary contact-button">
+                        <a href="mailto:codecrunchclub@gmail.com?cc=ibazu001@fiu.edu,apena211@fiu.edu.com&subject=Code%20Crunch%20Inquiry" class="btn btn-primary contact-button">
                             Email Us
                         </a>
                     </div>
