--- a/all-tropical-spring-hack25.html
+++ b/all-tropical-spring-hack25.html
@@ -329,7 +329,7 @@
                         <h2 class="fs-4 fw-bold text-primary">Registration for FIU Students</h2>
                         <a 
                            class="btn btn-success btn-lg mt-4 px-5" 
-                           href="https://forms.office.com/r/bCCWeeF4W3" 
+                           href="https://forms.gle/QyNzMYGRUbFKHi3T6" 
                            target="_blank" 
                            aria-label="Join Code Crunch for FIU Students">
                            Register Now
@@ -345,7 +345,7 @@
                         <h2 class="fs-4 fw-bold text-primary">Registration for Any University Student</h2>
                         <a 
                            class="btn btn-success btn-lg mt-4 px-5" 
-                           href="https://forms.office.com/r/GPibPyCy0Q" 
+                           href="https://forms.gle/RXxaM7JjanzAGr2W9" 
                            target="_blank" 
                            aria-label="Join Code Crunch for University Students Worldwide">
                            Register Now
