--- a/all-eboard.html
+++ b/all-eboard.html
@@ -276,9 +276,19 @@
                         <p>
                             Founded in August 2024, Code Crunch is a student-led club at Florida International University (FIU) dedicated to fostering a collaborative and inclusive environment for students passionate about coding and technology. The club’s mission is to enhance coding skills, promote innovation, and build a strong, diverse tech community at FIU.
                         </p>
+
                         <p>
                             With the launch of Code Crunch Global in October 2024, students worldwide can now join virtually to improve their technical skills and prepare for interviews in a supportive, community-driven environment.
                         </p>
+                    </div>
+
+                    <div class="container">
+                        <h3 class="fs-5 fw-bold mt-4 text-center">Who Can Apply?</h3>
+                        <ul class="text-start mx-auto" style="max-width: 600px;">
+                            <li>FIU students from all majors.</li>
+                            <li>Students from other universities worldwide.</li>
+                            <li>Industry professionals passionate about fostering innovation and supporting the next generation of tech talent.</li>
+                        </ul>
                     </div>
 
                     <!-- Column 2: Key Responsibilities -->
