--- a/index.html
+++ b/index.html
@@ -355,6 +355,41 @@
         <div class="row gx-lg-5 justify-content-center">           
 
 
+
+                <!-- Simple Card for Main Page -->
+                <div class="container py-5">
+                    <div class="row justify-content-center">
+                        <div class="col-md-6">
+                            <div class="card bg-light border-0 shadow-sm">
+                                <div class="card-body text-center p-4">
+                                    <h2 class="fs-4 fw-bold">Join the Code Crunch E-Board</h2>
+                                    <p class="mt-3">
+                                        Be part of the leadership team that fosters innovation and collaboration in technology. Whether you're a student or an industry leader, help shape the future of our club.
+                                    </p>
+                                
+
+                                <div class="container">
+                                    <h3 class="fs-5 fw-bold mt-4 text-center">Who Can Apply?</h3>
+                                    <ul class="text-start mx-auto" style="max-width: 600px;">
+                                        <li>FIU students from all majors.</li>
+                                        <li>Students from other universities worldwide.</li>
+                                        <li>Industry professionals passionate about fostering innovation and supporting the next generation of tech talent.</li>
+                                    </ul>
+                                </div>
+
+                                    <a href="https://go.fiu.edu/cc-e-board" 
+                                    target="_blank" 
+                                    class="btn btn-primary btn-lg mt-3" 
+                                    aria-label="E-Board Application">
+                                    Apply Now
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                    <!-- Become a Member Card -->
                    <div class="col-lg-6 col-xxl-4 mb-5">
                     <div class="card bg-light border-0 h-100">
