--- a/Attendance-FIU-guide.html
+++ b/Attendance-FIU-guide.html
@@ -155,13 +155,13 @@
                                 <li><strong>Joining the Discord</strong> for club communications. (You will receive the link to join after you complete the membership form).</li>
                                 <li><a href="https://www.linkedin.com/company/code-crunch-club/" target="_blank">Following us on LinkedIn</a> and <a href="https://www.instagram.com/codecrunchclub/" target="_blank">Instagram</a> for updates.</li>
                             </ul>
-                            <li>Record your <strong><a href="https://forms.office.com/r/xx2aRuEHDF">attendance</a></strong> (after you complete the membership form).</li>
+                            <li>Record your <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSenbytcGPguGz055Td6CfLonQo89r0NsWHrg60akDGeN9s8lQ/viewform?usp=dialog">attendance</a></strong> (after you complete the membership form).</li>
                             
                         </ul>
                             <br>
                         <h2>Steps for Current Members:</h2>
                         <ul class="steps-list">
-                            <li>Record your <strong><a href="https://forms.office.com/r/xx2aRuEHDF">attendance</a></strong> (including session attendance).</li>
+                            <li>Record your <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSenbytcGPguGz055Td6CfLonQo89r0NsWHrg60akDGeN9s8lQ/viewform?usp=dialog">attendance</a></strong> (including session attendance).</li>
                         </ul>
                         
                         <br>
