--- a/Attendance-FIU-guide.html
+++ b/Attendance-FIU-guide.html
@@ -149,13 +149,13 @@
                         <ul class="steps-list">
                             <li>Become an official member by:</li>
                             <ul>
-                                <li><a href="https://forms.office.com/r/JEbApqq0U9" target="_blank">Filling out the membership form</a> on the club website.</li>
+                                <li><a href="https://forms.gle/DAf9if9CjNsYioxRA" target="_blank">Filling out the membership form</a> on the club website.</li>
                                 
                                 <li>Completing your registration on <strong><a href="https://fiu.campuslabs.com/engage/organization/codecrunch" target="_blank">Panther Connect</a></strong></li>
                                 <li><strong>Joining the Discord</strong> for club communications. (You will receive the link to join after you complete the membership form).</li>
                                 <li><a href="https://www.linkedin.com/company/code-crunch-club/" target="_blank">Following us on LinkedIn</a> and <a href="https://www.instagram.com/codecrunchclub/" target="_blank">Instagram</a> for updates.</li>
                             </ul>
-                            <li>Record your <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSenbytcGPguGz055Td6CfLonQo89r0NsWHrg60akDGeN9s8lQ/viewform?usp=dialog">attendance</a></strong> (after you complete the membership form).</li>
+                            <li>Record your <strong><a href="https://forms.gle/NFDK9ukk8N3toVwr8g">attendance</a></strong> (after you complete the membership form).</li>
                             
                         </ul>
                             <br>
