--- a/Attendance-FIU-guide.html
+++ b/Attendance-FIU-guide.html
@@ -155,7 +155,7 @@
                                 <li><strong>Joining the Discord</strong> for club communications. (You will receive the link to join after you complete the membership form).</li>
                                 <li><a href="https://www.linkedin.com/company/code-crunch-club/" target="_blank">Following us on LinkedIn</a> and <a href="https://www.instagram.com/codecrunchclub/" target="_blank">Instagram</a> for updates.</li>
                             </ul>
-                            <li>Record your <strong><a href="https://forms.gle/NFDK9ukk8N3toVwr8g">attendance</a></strong> (after you complete the membership form).</li>
+                            <li>Record your <strong><a href="https://forms.gle/mAdff3FcsXibJZgQ9">attendance</a></strong> (after you complete the membership form).</li>
                             
                         </ul>
                             <br>
