--- a/index.html
+++ b/index.html
@@ -454,10 +454,10 @@
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5">
-                                <h2 class="fs-4 fw-bold">Join Our Discord</h2>
-                                <p class="mb-0">You must <strong>become a member</strong> to receive the invite link to join our Discord community.</p>
+                                <h2 class="fs-4 fw-bold">Join Our Discord & WhatsApp group</h2>
+                                <p class="mb-0">You must <strong>become a member</strong> to receive the invite link to join our Discord community & WhatsApp group.</p>
                                 
-                                <a class="btn btn-primary btn-lg mt-3" href="all-discord.html" target="_blank">Sign Up</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/M5itd5FK32" target="_blank">Sign Up</a>
                             </div>
                         </div>
                     </div>
