--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
     <!-- Header -->
     <header class="py-5 bg-light">
         <div class="container px-lg-5">
-            <div class="p-4 p-lg-5 rounded-3 text-center">
+            <div class="p-4 p-lg-5 rounded-3 text-center">   
                 <h1 class="display-5 fw-bold">About Code Crunch</h1>
                 <p class="fs-4">Your go-to place for FIU students to connect through coding, collaboration, and community</p>
                 
@@ -101,7 +101,7 @@
                     <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger" aria-label="Instagram">
                         <i class="bi bi-instagram"></i> Instagram
                     </a>
-                    <a href="https://forms.office.com/r/M5itd5FK32" class="btn btn-success" aria-label="WhatsApp">
+                    <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="btn btn-success" aria-label="WhatsApp">
                         <i class="bi bi-whatsapp"></i> WhatsApp
                     </a>
                     <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary" aria-label="Discord">
