--- a/all-305-Hackathon25.html
+++ b/all-305-Hackathon25.html
@@ -232,10 +232,10 @@
             <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger" aria-label="Visit Code Crunch on Instagram">
                 <i class="bi bi-instagram" aria-hidden="true"></i> Instagram
             </a>
-            <a href="https://forms.office.com/r/M5itd5FK32" class="btn btn-success" aria-label="Join Code Crunch WhatsApp group">
+            <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="btn btn-success" aria-label="Join Code Crunch WhatsApp group">
                 <i class="bi bi-whatsapp" aria-hidden="true"></i> WhatsApp
             </a>
-            <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary" aria-label="Join Code Crunch Discord community">
+            <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="btn btn-secondary" aria-label="Join Code Crunch Discord community">
                 <i class="bi bi-discord" aria-hidden="true"></i> Discord
             </a>
             <a href="https://fiu.campuslabs.com/engage/organization/codecrunch" class="btn btn-warning" aria-label="Join Code Crunch on Panther Connect">
