--- a/all-become-a-member.html
+++ b/all-become-a-member.html
@@ -224,28 +224,27 @@
 <header class="py-5">
     <div class="container px-lg-5 text-center">
 
-        <!-- Social Media Buttons -->
+        <!-- Social Media Links -->
         <div class="social-buttons">
-            <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary" aria-label="Visit Code Crunch on LinkedIn">
-                <i class="bi bi-linkedin" aria-hidden="true"></i> LinkedIn
+            <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary" aria-label="LinkedIn">
+                <i class="bi bi-linkedin"></i> LinkedIn
             </a>
-            <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger" aria-label="Visit Code Crunch on Instagram">
-                <i class="bi bi-instagram" aria-hidden="true"></i> Instagram
+            <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger" aria-label="Instagram">
+                <i class="bi bi-instagram"></i> Instagram
             </a>
-            <a href="https://forms.office.com/r/M5itd5FK32" class="btn btn-success" aria-label="Join Code Crunch WhatsApp group">
-                <i class="bi bi-whatsapp" aria-hidden="true"></i> WhatsApp
+            <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="btn btn-success" aria-label="WhatsApp">
+                <i class="bi bi-whatsapp"></i> WhatsApp
             </a>
-            <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary" aria-label="Join Code Crunch Discord community">
-                <i class="bi bi-discord" aria-hidden="true"></i> Discord
+            <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary" aria-label="Discord">
+                <i class="bi bi-discord"></i> Discord
             </a>
-            <a href="https://fiu.campuslabs.com/engage/organization/codecrunch" class="btn btn-warning" aria-label="Join Code Crunch on Panther Connect">
-                <i class="bi bi-university" aria-hidden="true"></i> Panther Connect
+            <a href="https://fiu.campuslabs.com/engage/organization/codecrunch" class="btn btn-warning" aria-label="Panther Connect">
+                <i class="bi bi-university"></i> Panther Connect
             </a>
-            <a href="https://linktr.ee/CODE.CRUNCH" class="btn btn-dark" aria-label="Visit Code Crunch on Linktree">
-                <i class="bi bi-link" aria-hidden="true"></i> Linktree
+            <a href="https://linktr.ee/CODE.CRUNCH" class="btn btn-dark" aria-label="Linktree">
+                <i class="bi bi-link"></i> Linktree
             </a>
         </div>
-
     </div>
 </header>
 
