--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                     <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger" aria-label="Instagram">
                         <i class="bi bi-instagram"></i> Instagram
                     </a>
-                    <a href="https://forms.office.com/r/M5itd5FK32" class="btn btn-success" aria-label="WhatsApp">
+                    <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="btn btn-success" aria-label="WhatsApp">
                         <i class="bi bi-whatsapp"></i> WhatsApp
                     </a>
                     <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary" aria-label="Discord">
