--- a/events.html
+++ b/events.html
@@ -150,6 +150,7 @@
                 <h1 class="display-5 fw-bold">Upcoming Events</h1>
             <p class="fs-4 mt-4">Stay tuned for exciting events hosted by Code Crunch!</p>
             
+            <!-- Social Media Links -->
             <div class="social-buttons">
                 <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary" aria-label="LinkedIn">
                     <i class="bi bi-linkedin"></i> LinkedIn
@@ -157,7 +158,7 @@
                 <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger" aria-label="Instagram">
                     <i class="bi bi-instagram"></i> Instagram
                 </a>
-                <a href="https://forms.office.com/r/M5itd5FK32" class="btn btn-success" aria-label="WhatsApp">
+                <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="btn btn-success" aria-label="WhatsApp">
                     <i class="bi bi-whatsapp"></i> WhatsApp
                 </a>
                 <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary" aria-label="Discord">
