--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                                 <li>Link to join Code Crunch on <strong>Panther Connect.</strong> Only Available for fiu students.</li>
                                 <li><strong>Code Crunch Github</strong> access granted weekly.</li>
                             </ul>
-                            <a class="btn btn-primary btn-lg mt-3" href="https://forms.gle/1Vui6XUcsFTx7ZARA" target="_blank">Become a Member</a>
+                            <a class="btn btn-primary btn-lg mt-3" href="all-become-a-member.html" target="_blank">Become a Member</a>
                         </div>
                     </div>
                 </div>
